--- a/.pipelines/prchecks/DevPRCheck.yml
+++ b/.pipelines/prchecks/DevPRCheck.yml
@@ -32,6 +32,6 @@ extends:
       credscan:
         suppressionsFile: .config/CredScanSuppressions.json
     stages:
-      - template: /.pipelines/templates/PackageBuildPRCheck.yml@self
+      - template: .pipelines/templates/PackageBuildPRCheck.yml@self
         parameters:
           dailyBuildID: "lkg"
