Upgrade graphene to 1.10.8-1
I had to change the download URL as for the 1.10.8 release there was not
a named release like before (graphene-1.10.4.tar.xz), instead it was
just a versioned release (1.10.8.tar.gz)

--- a/cgmanifest.json
+++ b/cgmanifest.json
@@ -4780,8 +4780,8 @@
         "type": "other",
         "other": {
           "name": "graphene",
-          "version": "1.10.4",
-          "downloadUrl": "https://github.com/ebassi/graphene/releases/download/1.10.4/graphene-1.10.4.tar.xz"
+          "version": "1.10.8",
+          "downloadUrl": "https://github.com/ebassi/graphene/archive/refs/tags/1.10.8.tar.gz"
         }
       }
     },
